<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">DinnerPlanner</string>
    <string name="bakedbrie">Bakedbrie</string>
    <string name="choose_menu">Choose Menu</string>
    <string name="choosebutton">Choose</string>
    <string name="createbutton">Create</string>
    <string name="cost">Total Cost: 80 kr</string>
    <string name="dessert">Dessert</string>
    <string name="hello_world">Hello world!</string>
    <string name="icecream">Icecream</string>
    <string name="individual_cost">Cost: 80kr \n (20kr / Person)</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="ingredientssummary">Beef  1200 gr \nTomatoes  200 gr \n Bread  2 loafs \n Sallad  100 gr \n Cheese  650 gr</string>
    <string name="main_course">Main Course</string>
    <string name="meatballs">Meatballs</string>
    <string name="number_of_guests">Choose the number of guests</string>
    <string name="participants">Participants:</string>
    <string name="persons">4 persons</string>
    <string name="sourdough">Sourdough</string>
    <string name="start_string">\nHere you will be able to easily plan your dinner.\n
        \nOn the next page start by selecting number of participants.
        \nThen select your courses.\n
        \nWatch Magic Happen!</string>
    <string name="startbutton">Start</string>
    <string name="starter">Starter</string>
    <string name="sumCost">80kr</string>
    <string name="toast">Toast</string>
    <string name="welcome">Welcome to Dinner Planner!</string>
    <string name="cancelbutton">Cancel</string>
	

</resources>


