<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
 <TextView
        android:id="@+id/popupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/bakedbrie" />
 
  <ImageView
      android:id="@+id/popupImage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/popupName"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="40dp"
      android:src="@drawable/bakedbrie" />

  <TextView
      android:id="@+id/popupCost"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/popupImage"
      android:layout_marginBottom="45dp"
      android:layout_toRightOf="@+id/popupImage"
      android:text="@string/individual_cost" />

  <Button
      android:id="@+id/popup_choosebutton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/popupImage"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="92dp"
      android:text="@string/choosebutton" />

  <Button
      android:id="@+id/popup_cancelbutton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@+id/popup_choosebutton"
      android:layout_alignBottom="@+id/popup_choosebutton"
      android:layout_alignLeft="@+id/popupCost"
      android:text="@string/cancelbutton" />

</RelativeLayout>
